# GCOPTER

./: .gitignore
gcopter/: .clangd  CMakeLists.txt  package.xml
gcopter/include/gcopter/: firi.hpp  gcopter.hpp  geo_utils.hpp  lbfgs.hpp  minco.hpp  quickhull.hpp  sdlp.hpp  sfc_gen.hpp  trajectory.hpp  voxel_dilater.hpp  voxel_map.hpp
gcopter/include/misc/: visualizer.hpp
gcopter/src/: global_planning.cpp
gcopter_trajectory/: CMakeLists.txt  package.xml
gcopter_trajectory/include/gcopter_trajectory/: flatness.hpp  root_finder.hpp  trajectory.hpp
gcopter_trajectory/pylib/src/trajectory/: __init__.py  trajectory.py
